src/objects/ACED_Audience__c.object
<CustomObject>
    <fields>
        <fullName>Affiliate__c</fullName>
        <inlineHelpText>This is a helptext for Affilliate</inlineHelpText>
        <label>Affiliate</label>
        <picklist>
            <controllingField>HUB__c</controllingField>
            <picklistValues>
                <fullName>ACE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Croatia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cyprus &amp; Malta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denmark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greece</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hungary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Macedonia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montengro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netherlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Norway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portugal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Romania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Serbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slovakia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slovenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>All_Segments__c</fullName>
        <formula>Non_Segmented__c  +  Patient_Focus_Professional__c  +  Patient_Idealist__c  +  Scientific_Innovator__c  +  Traditionalist__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a helptext for All Segments</inlineHelpText>
        <label>All Segments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Audience_Type__c</fullName>
        <inlineHelpText>This is a helptext for Audience Type</inlineHelpText>
        <label>Audience Type</label>
        <picklist>
            <picklistValues>
                <fullName>HCP</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Non-HCP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Function__c</fullName>
        <inlineHelpText>This is a helptext for Business Function</inlineHelpText>
        <label>Business Function</label>
        <picklist>
            <picklistValues>
                <fullName>Marketing</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Medical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Affairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_Load_Id__c</fullName>
        <label>Data Load Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HUB__c</fullName>
        <inlineHelpText>This is a helptext for HUB</inlineHelpText>
        <label>HUB</label>
        <picklist>
            <picklistValues>
                <fullName>ACE HUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia HUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada HUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France HUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany HUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy HUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain HUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK HUB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Non_Segmented__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is a helptext for Non Segmented</inlineHelpText>
        <label>Non Segmented</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Patient_Focus_Professional__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is a helptext for Patient Focus Professional</inlineHelpText>
        <label>Patient Focus Professional</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Patient_Idealist__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is a helptext for Patient Idealist</inlineHelpText>
        <label>Patient Idealist</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Professional_Type__c</fullName>
        <inlineHelpText>This is a helptext for Professional Type</inlineHelpText>
        <label>Professional Type</label>
        <picklist>
            <picklistValues>
                <fullName>Caregiver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Public</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Journalist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nurse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmacist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Scientific_Innovator__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is a helptext for Scientific Innovator</inlineHelpText>
        <label>Scientific Innovator</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Specialty__c</fullName>
        <inlineHelpText>This is a helptext for Specialty</inlineHelpText>
        <label>Specialty</label>
        <picklist>
            <picklistValues>
                <fullName>Anaesthetic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anatomopathologist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andrologist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiologist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child Endocrinologist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child Neurologist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child Psychiatrist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diabetologist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endocrinologist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geriatric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hemodinamist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital Pharmacist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intensivist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nephrologist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neumologist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neurologist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nurse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nutritionist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oncologist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oncology Nurse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paeditrician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pain Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physical Med/Rehabilitation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Psychiatrist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radiologist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radiotherapist</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Traditionalist__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is a helptext for Traditionalist</inlineHelpText>
        <label>Traditionalist</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Audience</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Audience_Type__c</columns>
        <columns>HUB__c</columns>
        <columns>Affiliate__c</columns>
        <columns>All_Segments__c</columns>
        <columns>Business_Function__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Specialty__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_HUB_Audience</fullName>
        <columns>NAME</columns>
        <columns>HUB__c</columns>
        <columns>Affiliate__c</columns>
        <columns>Patient_Idealist__c</columns>
        <columns>Professional_Type__c</columns>
        <columns>Patient_Focus_Professional__c</columns>
        <columns>Traditionalist__c</columns>
        <columns>Specialty__c</columns>
        <columns>Audience_Type__c</columns>
        <columns>Business_Function__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HUB__c</field>
            <operation>equals</operation>
        </filters>
        <label>My HUB Audience</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Audience Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Audience</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Audience_Hub_Matching</fullName>
        <active>true</active>
        <description>User can only select Audience Hub to which he belongs.</description>
        <errorConditionFormula>AND((TEXT($User.ACED_HUB__c)&lt;&gt;&apos;ACE HUB&apos;),IF(TEXT(HUB__c)&lt;&gt; TEXT($User.ACED_HUB__c),TRUE,FALSE))</errorConditionFormula>
        <errorDisplayField>HUB__c</errorDisplayField>
        <errorMessage>You cannot select Hub which you are not part of</errorMessage>
    </validationRules>
</CustomObject>